--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<iframe
-  id="chat_embed"
-  src="https://www.twitch.tv/embed/wildwolfgamingofficial/chat?parent=www.example.com"
-  height="500"
-  width="350">
-</iframe>
+<iframe src="https://player.twitch.tv/?channel=wildwolfgamingofficial&parent=chickengobuckbuck.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
